--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
   </head>
   <body>
     <nav
-      class="container mx-auto p-4 lg:pt-5 lg:pl-20 fixed top-0 backdrop-blur bg-white/50 z-10"
+      class="container mx-auto p-4 lg:pt-5 lg:pl-20 fixed w-full left-0 right-0 top-0 backdrop-blur bg-white/50 z-10"
     >
       <div class="flex justify-between items-center text-center">
         <button class="bg-[#B4F461] py-1 px-6 text-lg font-semibold rounded-md">
