blog part added with doante page responsive

--- a/index.html
+++ b/index.html
@@ -14,10 +14,13 @@
   </head>
   <body>
     <nav
-      class="container mx-auto p-4 lg:pt-5 lg:pl-20 fixed w-full left-0 right-0 top-0 backdrop-blur bg-white/50 z-10"
+      class="container mx-auto p-4 lg:pt-5 lg:pl-12 fixed w-full left-0 right-0 top-0 backdrop-blur bg-white/50 z-10"
     >
       <div class="flex justify-between items-center text-center">
-        <button class="bg-[#B4F461] py-1 px-6 text-lg font-semibold rounded-md">
+        <button
+          id="blog-btn"
+          class="bg-[#B4F461] py-1 px-6 text-lg font-semibold rounded-md"
+        >
           Blog
         </button>
         <div class="flex items-center lg:gap-2">
@@ -212,5 +215,6 @@
     <!-- javaScript files  -->
     <script src="js/common.js"></script>
     <script src="js/donate.js"></script>
+    <script src="js/blog.js"></script>
   </body>
 </html>
