--- a/index.html
+++ b/index.html
@@ -72,17 +72,15 @@
               </h1>
             </div>
             <h1 class="text-[#111111] font-bold text-xl">
-              Donate for Flood Relief in Feni,Bangladesh
+              "Stand with Noakhali: Join Hands in Urgent Flood Relief Efforts"
             </h1>
             <p class="text-slate-500 my-4">
-              The recent floods in Feni have devastated local communities,
-              leading to severe disruption and loss. Your generous donation will
-              help provide immediate aid, including food, clean water, and
-              medical supplies, to those affected by this calamity. Together, we
-              can offer crucial support and help rebuild lives in the aftermath
-              of this disaster. Every contribution counts towards making a real
-              difference. Please consider donating today to assist those in
-              urgent need.
+              "Noakhali is facing devastating floods, displacing families and
+              causing widespread damage. In this time of crisis, we urgently
+              need your support to provide food, shelter, and medical aid to
+              those affected. Every donation can make a difference in helping
+              the people of Noakhali rebuild their lives. Stand with us and
+              offer hope to those in need."
             </p>
             <input
               id="noakhali-donate-amount"
@@ -161,17 +159,16 @@
               </h1>
             </div>
             <h1 class="text-[#111111] font-bold text-xl">
-              Donate for Flood Relief in Feni,Bangladesh
+              Support the Injured Help Quota Movement Protesters Heal
             </h1>
             <p class="text-slate-500 my-4">
-              The recent floods in Feni have devastated local communities,
-              leading to severe disruption and loss. Your generous donation will
-              help provide immediate aid, including food, clean water, and
-              medical supplies, to those affected by this calamity. Together, we
-              can offer crucial support and help rebuild lives in the aftermath
-              of this disaster. Every contribution counts towards making a real
-              difference. Please consider donating today to assist those in
-              urgent need.
+              "During the Quota Reform Movement, many brave individuals were
+              injured while standing up for justice and equal opportunities.
+              These protesters now need urgent medical support and care. Your
+              donations can help provide essential treatment, rehabilitation,
+              and aid to those who were harmed. Stand with the injured and
+              contribute to their healing journey, as they continue to fight for
+              a fairer future."
             </p>
             <input
               id="quota-donate-amount"
@@ -209,7 +206,7 @@
         </div>
       </div>
       <!-- donation history  -->
-      <div id="history" class="hidden mx-40"></div>
+      <div id="history" class="hidden mx-1 lg:mx-40"></div>
     </main>
 
     <!-- javaScript files  -->
