FAQ section question added

--- a/blog.html
+++ b/blog.html
@@ -26,30 +26,52 @@
 
         <h1 class="font-bold text-2xl mt-8 mb-20">Important FAQ</h1>
         <div class="collapse collapse-arrow bg-base-200">
-          <input type="radio" name="my-accordion-2" checked="checked" />
+          <input type="radio" name="my-accordion-2" />
           <div class="collapse-title text-xl font-medium">
-            Click to open this one and close others
+            What is the Document Object Model (DOM)?
           </div>
           <div class="collapse-content">
-            <p>hello</p>
+            <p>The Document Object Model (DOM)</p>
           </div>
         </div>
         <div class="collapse collapse-arrow bg-base-200">
           <input type="radio" name="my-accordion-2" />
           <div class="collapse-title text-xl font-medium">
-            Click to open this one and close others
+            How do you select an element from the DOM?
           </div>
           <div class="collapse-content">
-            <p>hello</p>
+            <p>
+              You can select elements from the DOM using various methods in
+              JavaScript:getElementById(),getElementsByClassName(),querySelector()
+            </p>
           </div>
         </div>
         <div class="collapse collapse-arrow bg-base-200">
           <input type="radio" name="my-accordion-2" />
           <div class="collapse-title text-xl font-medium">
-            Click to open this one and close others
+            What is event delegation in the context of the DOM, and why is it
+            useful?
           </div>
           <div class="collapse-content">
-            <p>hello</p>
+            <p>
+              Event delegation is a technique where a single event listener is
+              added to a parent element instead of adding individual listeners
+              to each child element.
+            </p>
+          </div>
+        </div>
+        <div class="collapse collapse-arrow bg-base-200">
+          <input type="radio" name="my-accordion-2" />
+          <div class="collapse-title text-xl font-medium">
+            How do you manipulate an element's attributes and styles using the
+            DOM?
+          </div>
+          <div class="collapse-content">
+            <p>
+              I can manipulate attributes and styles of elements in the DOM
+              using various methods:setAttribute(attributeName, value),
+              getAttribute(attributeName)
+            </p>
           </div>
         </div>
       </div>
