--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
               </h1>
             </div>
             <h1 class="text-[#111111] font-bold text-xl">
-              "Stand with Noakhali: Join Hands in Urgent Flood Relief Efforts"
+              Stand with Noakhali Join Hands in Urgent Flood Relief Efforts
             </h1>
             <p class="text-slate-500 my-4">
               "Noakhali is facing devastating floods, displacing families and
