--- a/index.html
+++ b/index.html
@@ -14,9 +14,11 @@
   </head>
   <body>
     <nav
-      class="container mx-auto p-4 lg:pt-5 lg:pl-12 fixed w-full left-0 right-0 top-0 backdrop-blur bg-white/50 z-10"
+      class="container mx-auto lg:pl-12 fixed w-full left-0 right-0 top-0 backdrop-blur bg-white/50 z-10"
     >
-      <div class="flex justify-between items-center text-center">
+      <div
+        class="flex justify-between items-center text-center bg-[#F9F7F3] py-5"
+      >
         <button
           id="blog-btn"
           class="bg-[#B4F461] py-1 px-6 text-lg font-semibold rounded-md"
